# qwerty

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_MLIR.md  README.md  diffchud.txt  gcovr.cfg  hack.ninja  loc.sh  pyproject.toml  tablegen_compile_commands.yml  testingchud.txt  tmp_out_revolve.txt  tmp_out_revolve_s.txt  update_ninja_script.py
qwerty_ast/: Cargo.toml  build.rs
qwerty_ast/src/: ast.rs  dbg.rs  error.rs  lib.rs  meta.rs  repl.rs  span.rs  typecheck.rs
qwerty_ast/src/ast/: basis_tests.rs  classical.rs  qpu.rs  test_ast_basis.rs  test_ast_canonicalize.rs  test_ast_vec_qlit.rs  vector_qlit_tests.rs
qwerty_ast/src/meta/: classical.rs  expand.rs  infer.rs  lower.rs  prog_func.rs  qpu.rs  type_dim.rs
qwerty_ast/src/meta/expand/: expand_classical.rs  expand_qpu.rs
qwerty_ast/src/meta/qpu/: test_display.rs
qwerty_ast/src/repl/: qlit2sparse.rs
qwerty_ast/src/typecheck/: basis_tests.rs  core_tests.rs  mod.rs  test_typecheck_basis.rs  test_typecheck_core.rs  test_typecheck_vec_qlit.rs
qwerty_ast_to_mlir/: Cargo.toml
qwerty_ast_to_mlir/src/: compile.rs  ctx.rs  jit.rs  lib.rs  lower.rs  lower_classical.rs  lower_prog_stmt.rs  lower_qpu.rs  lower_type.rs  run.rs
qwerty_ast_to_mlir/src/lower/: classical.rs  prog_stmt.rs  qpu.rs  ty.rs
qwerty_ast_to_mlir/src/run/: backend.rs
qwerty_ast_to_mlir/src/run/backend/: qir_runner.rs  qiree.rs
qwerty_mlir/include/: CMakeLists.txt  util.hpp
qwerty_mlir/include/CAPI/: CCirc.h  QCirc.h  Qwerty.h  Utils.h
qwerty_mlir/include/CCirc/IR/: CCirc.td  CCircAttributes.h  CCircAttributes.td  CCircDialect.h  CCircDialect.td  CCircOps.h  CCircOps.td  CCircTypes.h  CCircTypes.td  CMakeLists.txt  QCircAttributes.h  QCircAttributes.td  QCircDialect.h  QCircDialect.td  QCircInterfaces.td  QCircOps.h  QCircOps.td  QCircTypes.td
qwerty_mlir/include/CCirc/Synth/: CCircSynth.h
qwerty_mlir/include/CCirc/Transforms/: CCircPasses.h  CCircPasses.td  CMakeLists.txt  QCircPasses.h  QCircPasses.td
qwerty_mlir/include/CCirc/Utils/: QCircUtils.h
qwerty_mlir/include/QCirc/IR/: QCirc.td  QCircInterfaces.h  QCircOps.h  QCircTypes.h
qwerty_mlir/include/QCirc/Synth/: QCircSynth.h
qwerty_mlir/include/QCirc/Transforms/: CMakeLists.txt  QCircPasses.h  QCircPasses.td
qwerty_mlir/include/QCirc/Utils/: QCircUtils.h
qwerty_mlir/include/Qwerty/Analysis/: FuncSpecAnalysis.h  QubitIndexAnalysis.h
qwerty_mlir/include/Qwerty/IR/: CMakeLists.txt  Qwerty.td  QwertyAttributes.h  QwertyAttributes.td  QwertyDialect.h  QwertyDialect.td  QwertyInterfaces.h  QwertyInterfaces.td  QwertyOps.h  QwertyOps.td  QwertyTypes.h  QwertyTypes.td
qwerty_mlir/include/Qwerty/Transforms/: CMakeLists.txt  QwertyPasses.h  QwertyPasses.td
qwerty_mlir/include/Qwerty/Utils/: QwertyUtils.h
qwerty_mlir/lib/: CMakeLists.txt
qwerty_mlir/lib/CAPI/: CCirc.cpp  CCircPasses.cpp  CMakeLists.txt  QCirc.cpp  QCircPasses.cpp  Qwerty.cpp  QwertyPasses.cpp  Utils.cpp
qwerty_mlir/lib/CCirc/: CMakeLists.txt
qwerty_mlir/lib/CCirc/IR/: CCircAttributes.cpp  CCircDialect.cpp  CCircOps.cpp  CCircTypes.cpp  CMakeLists.txt  QCircAttributes.cpp  QCircInterfaces.cpp
qwerty_mlir/lib/CCirc/Synth/: CMakeLists.txt  SynthArith.cpp  SynthRotate.cpp
qwerty_mlir/lib/CCirc/Transforms/: CCircToFuncArithConversionPass.cpp  CCircToXAGConversionPass.cpp  CMakeLists.txt  DecomposeMultiControlPass.cpp  InlineAdjPass.cpp  PassDetail.h  QCircToQIRConversionPass.cpp  ReplaceNonQIRGatesPass.cpp  SynthConversionPatterns.cpp
qwerty_mlir/lib/CCirc/Utils/: AdjointBlock.cpp  CMakeLists.txt  GenerateQasm.cpp
qwerty_mlir/lib/QCirc/: CMakeLists.txt
qwerty_mlir/lib/QCirc/IR/: CMakeLists.txt  QCircDialect.cpp  QCircOps.cpp  QCircTypes.cpp
qwerty_mlir/lib/QCirc/Synth/: CMakeLists.txt  SynthBennett.cpp  SynthPerm.cpp
qwerty_mlir/lib/QCirc/Transforms/: BarencoDecomposePass.cpp  BaseProfilePrepPasses.cpp  CMakeLists.txt  DecomposeMultiControlPass.cpp  InlineAdjPass.cpp  PassDetail.h  PeepholeOptimizationPass.cpp  QCircToQIRConversionPass.cpp  ReplaceAnnoyingGatesPass.cpp  ReplaceNonQIRGatesPass.cpp  ReplaceNonQasmGatesPass.cpp  RewriterDetail.h
qwerty_mlir/lib/QCirc/Utils/: CMakeLists.txt  SynthBennett.cpp  SynthPerm.cpp
qwerty_mlir/lib/Qwerty/Analysis/: CMakeLists.txt  FuncSpecAnalysis.cpp  QubitIndexAnalysis.cpp
qwerty_mlir/lib/Qwerty/IR/: CMakeLists.txt  QwertyAttributes.cpp  QwertyDialect.cpp  QwertyInterfaces.cpp  QwertyOps.cpp  QwertyTypes.cpp
qwerty_mlir/lib/Qwerty/Transforms/: CMakeLists.txt  InlinePredPass.cpp  LiftLambdasPass.cpp  OnlyPredOnesPass.cpp  PassDetail.h  QwertyToQCircConversionPass.cpp  SynthEmbedsPass.cpp
qwerty_mlir/lib/Qwerty/Utils/: CMakeLists.txt  PredBlock.cpp
qwerty_mlir/tools/qwerty-opt/: CMakeLists.txt  epic.cpp  qwerty-opt.cpp
qwerty_mlir/tools/qwerty-translate/: CMakeLists.txt  qwerty-translate.cpp
qwerty_pyrt/: Cargo.toml  pyproject.toml
qwerty_pyrt/python/qwerty/: __init__.py  __main__.py  convert_ast.py  default_qpu_prelude.py  err.py  jit.py  kernel.py  prelude.py  pyast_utils.py  repl.py  runtime.py
qwerty_pyrt/python/qwerty/tests/: __init__.py  integration_tests.py  test_convert_ast.py  test_repl.py  test_runtime.py
qwerty_pyrt/python/qwerty/tests/integ/: baby_classical_nometa.py  bell_pred_nometa.py  bv_nocap_nometa.py  bv_noclassical_nometa.py  bv_nometa.py  fourier_nometa.py  (+8 more)
qwerty_pyrt/qwerty-jupyter/: kernel.json
qwerty_pyrt/rust/: Cargo.toml  build.rs
qwerty_pyrt/rust/src/: lib.rs  mlir.rs  wrap_ast.rs  wrap_repl.rs
qwerty_pyrt/rust/src/mlir/: ctx.rs  jit.rs  lower_classical.rs  lower_prog_stmt.rs  lower_qpu.rs  lower_type.rs
qwerty_pyrt/rust/src/wrap_ast/: classical.rs  prog.rs  py_glue.rs  qpu.rs  ty.rs  wrap_classical.rs  wrap_dim_expr.rs  wrap_prog.rs  wrap_qpu.rs  wrap_type.rs
qwerty_pyrt/src/: lib.rs
test/test_qwerty/: CMakeLists.txt  __init__.py  test_convert_ast.py  test_runtime.py
test/test_qwerty/ast_visitor/: test_canonicalize.cpp  test_desugar.cpp  test_flag_immat.cpp  test_type_checking.cpp
test/test_qwerty/support/: test_support.cpp  test_support.hpp
(+1156 files in other folders)
