[package]
name = "qwerty_pyrt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qwerty"
crate-type = ["cdylib"]

[dependencies]
dashu = "0.4.2"
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py310"] }
qwerty_ast = { version = "0.1.0", path = "../../qwerty_ast" }
qwerty_ast_to_mlir = { version = "0.1.0", path = "../../qwerty_ast_to_mlir" }
# See build.rs for why this dependency is here
qwerty-mlir-sys = { version = "210.0.0", path = "../../qwerty_mlir_sys", optional = true }

[features]
# See build.rs for what this feature is
qwerty-opt = ["dep:qwerty-mlir-sys"]
default = ["qwerty-opt"]
